Added template for init.d service registration

--- a/templates/artifact.conf.erb
+++ b/templates/artifact.conf.erb
@@ -1,1 +1,5 @@
-JAVA_OPTS="<%= v -%>"
+JARFILE=<%= @jar_file %>
+LOG_FOLDER=<%= @log_folder %>
+RUN_ARGS="<%= @run_args %>"
+JAVA_OPTS=<%= @java_opts %>
+LOG_FILENAME=<%= @log_filename %>
